--- a/DrumKit/index.html
+++ b/DrumKit/index.html
@@ -87,6 +87,23 @@ function playSound(e){
 
 }
 
+function playSoundPhone(e){
+	let charCode = e.charCodeAt(0)
+	
+	if(e.charCodeAt(0) == 59){
+		charCode = 186;
+	}
+	
+	const audio = document.querySelector(`audio[data-key="${charCode}"]`);
+	const key = document.querySelector(`.key[data-key="${charCode}"]`);
+	if(!audio) return; //stop function from running if no audio
+	key.classList.add('playing');
+	audio.currentTime = 0 ; //rewind to the start
+	audio.play();
+
+}
+
+
 function removeTransition(e){
 	console.log(e.propertyName);
 	if(e.propertyName !== 'transform') return; //skip if not transform
@@ -96,6 +113,16 @@ function removeTransition(e){
 const keys = document.querySelectorAll('.key');
 keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 window.addEventListener('keydown', playSound);
+
+document.onclick= function(event) {
+    // Compensate for IE<9's non-standard event model
+    //
+    if (event===undefined) event= window.event;
+    var target= 'target' in event? event.target : event.srcElement;
+
+	playSoundPhone(target.innerHTML);
+    //alert('clicked on '+target.innerHTML);
+};
 
 </script>
 
